          specific DateTime::Format dependencies

    * Fixes
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)

    * Misc
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)

0.082820 2015-03-20 20:35 (UTC)
    * Fixes
        - Protect destructors from rare but possible double execution, and
          loudly warn the user whenever the problem is encountered (GH#63)
        - Relax the 'self_result_object' argument check in the relationship
          resolution codepath, restoring exotic uses of inflate_result
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html
        - Fix updating multiple CLOB/BLOB columns on Oracle
        - Fix exception on complex update/delete under a replicated setup
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html
        - Fix uninitialized warnings on empty hashes passed to join/prefetch
          https://github.com/vanstyn/RapidApp/commit/6f41f6e48 and
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-February/011921.html
        - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
          implementation changes due to RT#100648 made an alarm() based
          timeout lock-prone.

    * Misc
        - Remove warning about potential side effects of RT#79576 (scheduled)
        - Various doc improvements (GH#35, GH#62, GH#66, GH#70, GH#71, GH#72)