@@ -11,6 +11,8 @@ Revision history for DBIx::Class
         - Fix corner case of stringify-only overloaded objects being used in
           create()/populate()
         - Fix t/52leaks.t failures on compilerless systems (RT#104429)
+        - Fix t/storage/quote_names.t failures on systems with specified Oracle
+          test credentials while missing the optional Math::Base36
 
     * Misc
         - Skip tests in a way more intelligent and speedy manner when optional
